--- a/Examen/app/views/Application/index.html
+++ b/Examen/app/views/Application/index.html
@@ -1,5 +1,5 @@
 #{extends 'main.html' /}
 #{set title:'Home' /}
 
+<h1>Benvinguts al servidor de PES</h1>
 <img src="/public/images/1.jpg"></img>
-<img src="/public/images/2.jpg"></img>
